--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-4 align-self-center">
-    <img class="img-responsive center-block mb-5 mx-auto" src="{{user.image}}"
+    <img class="img-responsive center-block mb-5 mx-auto" src="{{account.image}}"
       style="width: 250px; transition: opacity 0.5s; opacity:0; border-radius: 50%;" onload="this.style.opacity=1;" />
   </div>
   <div class="col-md-8">
@@ -8,19 +8,19 @@
       <ul class="list-unstyled">
         <li class="mb-3 fs-2">
           <strong>
-            {{user.name}}
+            {{account.name}}
           </strong>
         </li>
         <li class="mb-5">
           <strong>
-            {{user.email}}
+            {{account.email}}
           </strong>
         </li>
         <li class="mb-1">
           <p>
             已評論
             <strong>
-              {{ user.Comments.length }}
+              {{ account.Comments.length }}
             </strong>
             間餐廳
           </p>
@@ -30,8 +30,8 @@
 
 
     <div class="d-flex">
-      {{#ifCond user.id user.id}}
-      <a class="btn btn-primary mx-1" href="/users/{{user.id}}/edit">
+      {{#ifCond account.id user.id}}
+      <a class="btn btn-primary mx-1" href="/users/{{account.id}}/edit">
         Edit
       </a>
       {{else}}
@@ -48,10 +48,10 @@
     <br />
     <div class="card">
       <div class="card-header">
-        <strong>{{user.Comments.length}}</strong> 已評論餐廳
+        <strong>{{account.Comments.length}}</strong> 已評論餐廳
       </div>
       <div class="card-body">
-        {{#each user.Comments}}
+        {{#each account.Comments}}
         <a href="/restaurants/{{this.Restaurant.id}}" class="text-decoration-none">
           <img src="{{this.Restaurant.image}}" width="60" height="60" class="avatar"
             style="transition: opacity 0.5s; opacity:0;" onload="this.style.opacity=1;" />
